2007-02-19 [paul]	2.7.2cvs51

	* tools/Makefile.am
	* tools/README
	* tools/thunderbird-filters-convertor.pl
		add new script which converts thunderbird filter
		rules to Claws filter rules

2007-02-18 [paul]	2.7.2cvs50

	* src/plugins/pgpcore/prefs_gpg.c
	* src/plugins/pgpcore/prefs_gpg.h
	* src/plugins/pgpcore/sgpgme.c
	* src/plugins/pgpinline/pgpinline.c
	* src/plugins/pgpmime/pgpmime.c
		improved GUI interoperability with gpg-agent

2007-02-18 [paul]	2.7.2cvs49

	* src/prefs_account.c
		Privacy options sensitivity fix

2007-02-17 [colin]	2.7.2cvs48

	* src/messageview.c
		Reset icon to warning in the noticeview

2007-02-15 [colin]	2.7.2cvs47

	* src/folderview.c
		Fix a manifestation of bug 1033 (summaryview failing
		to update for new mails), which happens after editing
		account preferences or preferences that cause a 
		folderview reload.

2007-02-15 [colin]	2.7.2cvs46

	* src/addressbook.c
		Probably fix bug 1123, 'Segmentation 
		fault while opening address book'. I get
		g_warnings if the saved paned position is
		not greater than 0. Also, save position
		when hiding the addressbook instead of
		via signal.

2007-02-14 [colin]	2.7.2cvs45

	* src/plugins/pgpcore/prefs_gpg.c
	* src/plugins/pgpcore/prefs_gpg.h
	* src/plugins/pgpcore/sgpgme.c
	* src/plugins/pgpinline/pgpinline.c
	* src/plugins/pgpmime/pgpmime.c
		Add an option "Use gpg-agent if available". Fixes
		annoyances with distro-installed gpg-agent, when
		no pinentry program is installed, and the user's 
		at a loss on why "decryption failed". Makes more
		clear why passphrase isn't saved when gpg-agent is
		used. Defaults to true, to avoid changing the 
		current behaviour.

2007-02-14 [wwp]	2.7.2cvs44

	* src/matcher_parser_parse.y
		Fix missing line number reset (wrong line number might appear
		when re-loading filtering rules if there's a parser error).

2007-02-13 [colin]	2.7.2cvs43

	* src/common/utils.c
		Don't encode ',' in URIs before passing it
		to the browser command-line. It was probably