@@ -1,3 +1,11 @@
+2007-02-19 [colin]	2.7.2cvs52
+
+	* src/folderview.c
+		Fix bug 1033, 'Automatically refresh 
+		message list when new messages arrives'
+		Looks like folderview->opened can sometimes
+		be wrong...
+
 2007-02-19 [paul]	2.7.2cvs51
 
 	* tools/Makefile.am
